--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,3 +5,10 @@
   .example-spacer {
     flex: 1 1 auto;
   }
+
+  mat-toolbar a {
+    display: inline-block;
+    margin: 0 10px;
+    color: white;
+    text-decoration: none;
+  }
