--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,14 +5,11 @@
   </mat-toolbar-row>
 
   <mat-toolbar-row>
-    <span>Second Line</span>
-    <!-- <span class="example-spacer"></span>
-    <mat-icon class="example-icon">verified_user</mat-icon> -->
     <span>
     <a [routerLink]="'/add-project'"> Add Project </a>
     <a [routerLink]="'/add-task'"> Add Task </a>
     <a [routerLink]="'/add-user'"> Add User </a>
-    <a [routerLink]="'/view-task'"> Add Task </a>
+    <a [routerLink]="'/view-task'">View Task </a>
   </span>
   
   </mat-toolbar-row>
