--- a/src/app/UI/add-project/add-project.component.html
+++ b/src/app/UI/add-project/add-project.component.html
@@ -1,3 +1,102 @@
-<p>
-  add-project works!
-</p>
+<!-- main app container -->
+
+<div class="container cont-left-margin">
+    <!-- <div class="col-md-6 offset-md-3"> -->
+    <div class="page-title">Add Project</div>
+    <form class="form-horizontal" [formGroup]="AddProjectForm" #formDir="ngForm" (ngSubmit)="onSubmit()" novalidate autocomplete="off" >
+  
+      <div class="example-container">
+        <mat-form-field>
+          <input matInput placeholder="Project Name" formControlName="ProjectName" class="form-control" required maxlength="30">
+          <mat-error *ngIf="ProjectName?.required">
+            Project Name is required
+          </mat-error>
+        </mat-form-field>
+
+        <div class="row">
+          <div class="col-md-4 col-sm-12"> 
+            <mat-checkbox (click)="toggleDate()" formControlName="dateRequired">set start & end date</mat-checkbox> 
+          </div>
+          <div class="col-md-4 col-sm-12"> 
+            <mat-form-field>
+              <input matInput [matDatepicker]="stPicker" placeholder="Start Date" formControlName="startDate" required>
+              <mat-datepicker-toggle matSuffix [for]="stPicker"></mat-datepicker-toggle>
+              <mat-datepicker #stPicker></mat-datepicker>
+            </mat-form-field>
+          </div>
+          <div class="col-md-4 col-sm-12"> 
+              <mat-form-field>
+                  <input matInput [matDatepicker]="endPicker" placeholder="End Date" formControlName="endDate" required>
+                  <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
+                  <mat-datepicker #endPicker></mat-datepicker>
+                </mat-form-field>
+            </div>
+        </div>
+      <div class="form-group">
+        <label for="priority">Priority:</label>
+        <mat-slider min="0" max="30" step="1" id="priority" formControlName="priority"></mat-slider>
+        <!-- <mat-error *ngIf="priority?.min">
+            Priority  is required
+          </mat-error> -->
+      </div>
+      <div class="row">
+      <div class="col-md-8">
+        <mat-form-field>
+          <input matInput placeholder="Manager" formControlName="Manager" class="form-control" required maxlength="30">
+        </mat-form-field>
+      </div>
+      <div class="col-md-4">
+          <button mat-raised-button color="primary" type="search" (click)="searchManager()">Search</button>
+      </div>
+    </div>
+        
+      </div>
+  
+      <div class="button-row">
+        <button mat-raised-button color="primary" type="submit">{{SubmitButton}}</button>
+        <button mat-raised-button color="primary" type="reset" (click)="resetForm()">Reset</button>
+      </div>
+  
+    </form>
+  
+    <mat-divider class="margin-div"></mat-divider>
+  
+    <div class="row">
+      <div class="col-md-4">
+      <mat-form-field class="search_field">
+        <input matInput placeholder="Search User" [(ngModel)]="searchTerm" />
+      </mat-form-field>
+    </div>
+    <div class="col-md-8 button-row">
+      <button mat-raised-button color="primary" (click)="sortList('FirstName')" >First Name</button>
+      <button mat-raised-button color="primary" (click)="sortList('LastName')">Last Name</button>
+      <button mat-raised-button color="primary" (click)="sortList('EmpId')">Employee Id</button>
+    </div>
+    </div>
+  
+    <div id="divUserList">
+      <mat-list>
+        <mat-list-item class="pading-bottom" *ngFor="let user of userList | filter : searchTerm | orderby: path : order" >
+          <div class="col-md-6 col-sm-12 pading-bottom">
+            <div class="row">
+              <h4 mat-line class="lst-itm-header">First Name</h4>
+              <p mat-line>{{user.FirstName}}</p>
+            </div>
+            <div class="row">
+              <h4 mat-line class="lst-itm-header">Last Name</h4>
+              <p mat-line>{{user.LastName}}</p>
+            </div>
+            <div class="row">
+              <h4 mat-line class="lst-itm-header">Employee Id</h4>
+              <p mat-line>{{user.EmpId}}</p>
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-12 lst-item-button">
+            <button mat-raised-button color="primary" (click)="editUser(user)" class="btn-row">Edit</button>
+            <button mat-raised-button color="primary" (click)="deleteUser(user)" class="btn-row">Delete</button>
+          </div>
+          <mat-divider></mat-divider>
+        </mat-list-item>
+      </mat-list>
+    </div>
+  </div>
