--- a/src/app/UI/add-project/add-project.component.html
+++ b/src/app/UI/add-project/add-project.component.html
@@ -1,102 +1,123 @@
 <!-- main app container -->
 
 <div class="container cont-left-margin">
-    <!-- <div class="col-md-6 offset-md-3"> -->
-    <div class="page-title">Add Project</div>
-    <form class="form-horizontal" [formGroup]="AddProjectForm" #formDir="ngForm" (ngSubmit)="onSubmit()" novalidate autocomplete="off" >
-  
-      <div class="example-container">
-        <mat-form-field>
-          <input matInput placeholder="Project Name" formControlName="ProjectName" class="form-control" required maxlength="30">
-          <mat-error *ngIf="ProjectName?.required">
-            Project Name is required
-          </mat-error>
-        </mat-form-field>
+  <!-- <div class="col-md-6 offset-md-3"> -->
+  <div class="page-title">Add Project</div>
+  <form class="form-horizontal" [formGroup]="AddProjectForm" #formDir="ngForm" (ngSubmit)="onSubmit()" novalidate autocomplete="off">
 
-        <div class="row">
-          <div class="col-md-4 col-sm-12"> 
-            <mat-checkbox (click)="toggleDate()" formControlName="dateRequired">set start & end date</mat-checkbox> 
-          </div>
-          <div class="col-md-4 col-sm-12"> 
-            <mat-form-field>
-              <input matInput [matDatepicker]="stPicker" placeholder="Start Date" formControlName="startDate" required>
-              <mat-datepicker-toggle matSuffix [for]="stPicker"></mat-datepicker-toggle>
-              <mat-datepicker #stPicker></mat-datepicker>
-            </mat-form-field>
-          </div>
-          <div class="col-md-4 col-sm-12"> 
-              <mat-form-field>
-                  <input matInput [matDatepicker]="endPicker" placeholder="End Date" formControlName="endDate" required>
-                  <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
-                  <mat-datepicker #endPicker></mat-datepicker>
-                </mat-form-field>
-            </div>
-        </div>
-      <div class="form-group">
-        <label for="priority">Priority:</label>
-        <mat-slider min="0" max="30" step="1" id="priority" formControlName="priority"></mat-slider>
-        <!-- <mat-error *ngIf="priority?.min">
-            Priority  is required
-          </mat-error> -->
-      </div>
+    <div class="example-container">
+
+      <mat-form-field>
+        <input matInput placeholder="Project Name" formControlName="projectName" class="form-control" required maxlength="30">
+        <mat-error *ngIf="ProjectName?.required">
+          Project Name is required
+        </mat-error>
+      </mat-form-field>
+
       <div class="row">
-      <div class="col-md-8">
-        <mat-form-field>
-          <input matInput placeholder="Manager" formControlName="Manager" class="form-control" required maxlength="30">
-        </mat-form-field>
+        <div class="col-md-4 col-sm-12 top-padding">
+          <mat-checkbox (click)="toggleDate()" formControlName="DateReqd">Set Start & End date</mat-checkbox>
+        </div>
+
+        <div class="col-md-4 col-sm-12">
+          <mat-form-field>
+            <input matInput [matDatepicker]="stPicker" placeholder="Start Date" formControlName="startDate" required>
+            <mat-datepicker-toggle matSuffix [for]="stPicker"></mat-datepicker-toggle>
+            <mat-datepicker #stPicker></mat-datepicker>
+          </mat-form-field>
+        </div>
+        <div class="col-md-4 col-sm-12">
+          <mat-form-field>
+            <input matInput [matDatepicker]="endPicker" placeholder="End Date" formControlName="endDate" required>
+            <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
+            <mat-datepicker #endPicker></mat-datepicker>
+          </mat-form-field>
+        </div>
       </div>
-      <div class="col-md-4">
-          <button mat-raised-button color="primary" type="search" (click)="searchManager()">Search</button>
+
+      <div class="form-group col-md-4 col-sm-12">
+        <label for="ProjectPriority">Priority:</label>
+        <mat-slider min="0" max="30" step="1" id="ProjectPriority" formControlName="ProjectPriority" class="parm-width" thumbLabel></mat-slider>
+        <mat-error *ngIf="ProjectPriority?.min">
+          Priority is required
+        </mat-error>
       </div>
+
+      <div class="row">
+        <div class="col-md-8">
+          <mat-form-field class="parm-width">
+            <input matInput placeholder="Manager" formControlName="manager" class="form-control" required maxlength="50" readonly>
+          </mat-form-field>
+        </div>
+        <div class="col-md-4 search-manager">
+          <button mat-raised-button color="primary" type="search" (click)="openSearchManager()">Search</button>
+        </div>
+      </div>
+
     </div>
-        
-      </div>
-  
-      <div class="button-row">
-        <button mat-raised-button color="primary" type="submit">{{SubmitButton}}</button>
-        <button mat-raised-button color="primary" type="reset" (click)="resetForm()">Reset</button>
-      </div>
-  
-    </form>
-  
-    <mat-divider class="margin-div"></mat-divider>
-  
-    <div class="row">
-      <div class="col-md-4">
+
+    <div class="button-row">
+      <button mat-raised-button color="primary" type="submit">{{SubmitButton}}</button>
+      <button mat-raised-button color="primary" type="reset" (click)="resetForm()">Reset</button>
+    </div>
+
+  </form>
+
+  <mat-divider class="margin-div"></mat-divider>
+
+  <div class="row">
+    <div class="col-md-4">
       <mat-form-field class="search_field">
-        <input matInput placeholder="Search User" [(ngModel)]="searchTerm" />
+        <input matInput placeholder="Search Project . . " [(ngModel)]="searchTerm" />
       </mat-form-field>
     </div>
     <div class="col-md-8 button-row">
-      <button mat-raised-button color="primary" (click)="sortList('FirstName')" >First Name</button>
-      <button mat-raised-button color="primary" (click)="sortList('LastName')">Last Name</button>
-      <button mat-raised-button color="primary" (click)="sortList('EmpId')">Employee Id</button>
-    </div>
-    </div>
-  
-    <div id="divUserList">
-      <mat-list>
-        <mat-list-item class="pading-bottom" *ngFor="let user of userList | filter : searchTerm | orderby: path : order" >
-          <div class="col-md-6 col-sm-12 pading-bottom">
-            <div class="row">
-              <h4 mat-line class="lst-itm-header">First Name</h4>
-              <p mat-line>{{user.FirstName}}</p>
-            </div>
-            <div class="row">
-              <h4 mat-line class="lst-itm-header">Last Name</h4>
-              <p mat-line>{{user.LastName}}</p>
-            </div>
-            <div class="row">
-              <h4 mat-line class="lst-itm-header">Employee Id</h4>
-              <p mat-line>{{user.EmpId}}</p>
-            </div>
-          </div>
-          <div class="col-md-6 col-sm-12 lst-item-button">
-            <button mat-raised-button color="primary" (click)="editUser(user)" class="btn-row">Edit</button>
-            <button mat-raised-button color="primary" (click)="deleteUser(user)" class="btn-row">Delete</button>
-          </div>
-          <mat-divider></mat-divider>
-        </mat-list-item>
-      </mat-list>
+      <button mat-raised-button color="primary" (click)="sortList('StartDate')">Start Date</button>
+      <button mat-raised-button color="primary" (click)="sortList('EndDate')">End Date</button>
+      <button mat-raised-button color="primary" (click)="sortList('ProjectPriority')">Priority</button>
+      <button mat-raised-button color="primary" (click)="sortList('completedTasks')">Completed</button>
     </div>
   </div>
+
+  <div id="divProjectList">
+    <mat-list>
+      <mat-list-item class="pading-bottom" *ngFor="let project of projectList | filter : searchTerm | orderby: path : order">
+        <div class="col-md-8 col-sm-12 pading-bottom">
+          <div class="row col-md-12">
+            <h4 mat-line class="lst-itm-header">Project</h4>
+            <p mat-line>{{project.ProjectName}}</p>
+          </div>
+          <div class="row col-md-12">
+            <div class="row col-md-6">
+              <h4 mat-line class="lst-itm-header">No. of Tasks</h4>
+              <p mat-line>{{project.TaskCount}}</p>
+            </div>
+            <div class="row col-md-6">
+              <h4 mat-line class="lst-itm-header">Completed</h4>
+              <p mat-line>{{project.CompletedTasks}}</p>
+            </div>
+          </div>
+          <div class="row col-md-12">
+            <div class="row col-md-6">
+              <h4 mat-line class="lst-itm-header">Start Date</h4>
+              <p mat-line>{{project.StartDate}}</p>
+            </div>
+            <div class="row col-md-6">
+              <h4 mat-line class="lst-itm-header">End Date</h4>
+              <p mat-line>{{project.EndDate}}</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-2 col-sm-12 pading-bottom">
+          <h4 mat-line class="lst-itm-header-priority">Priority</h4>
+          <p mat-line>{{project.ProjectPriority}}</p>
+        </div>
+        <div class="col-md-2 col-sm-12 lst-item-button">
+          <button mat-raised-button color="primary" (click)="editProject(project)" class="btn-row edit-button">Edit</button>
+          <button mat-raised-button color="primary" (click)="suspendProject(project)" class="btn-row">Suspend</button>
+        </div>
+        <mat-divider></mat-divider>
+      </mat-list-item>
+    </mat-list>
+  </div>
+</div>
