added add task and search components

--- a/src/app/UI/add-project/add-project.component.css
+++ b/src/app/UI/add-project/add-project.component.css
@@ -62,3 +62,10 @@
 .edit-button{
     margin-bottom: 10px;
 }
+.lst-bg-color{
+background-color: aliceblue;
+}
+.priority-style{
+    margin-left: 10px;
+    padding: inherit;
+}
