--- a/src/app/UI/add-task/add-task.component.html
+++ b/src/app/UI/add-task/add-task.component.html
@@ -10,7 +10,7 @@
       <div class="row">
         <div class="col-md-8">
           <mat-form-field class="parm-width">
-            <input matInput placeholder="Project" formControlName="ProjectName" class="form-control" required maxlength="50" readonly>
+            <input matInput placeholder="Project" formControlName="ProjectName" class="form-control" required  readonly>
           </mat-form-field>
         </div>
         <div class="col-md-4 search-manager">
@@ -45,7 +45,7 @@
       <div class="row">
         <div class="col-md-8">
           <mat-form-field class="parm-width">
-            <input matInput placeholder="Parent Task" formControlName="ParentTask" class="form-control" required maxlength="60" readonly>
+            <input matInput placeholder="Parent Task" formControlName="ParentTask" class="form-control" required readonly>
           </mat-form-field>
         </div>
         <div class="col-md-4 search-manager">
@@ -74,7 +74,7 @@
       <div class="row">
         <div class="col-md-8">
           <mat-form-field class="parm-width">
-            <input matInput placeholder="UserName" formControlName="UserName" class="form-control" required maxlength="50" readonly>
+            <input matInput placeholder="UserName" formControlName="UserName" class="form-control" required readonly>
           </mat-form-field>
         </div>
         <div class="col-md-4 search-manager">
