--- a/src/app/UI/edit-task/edit-task.component.html
+++ b/src/app/UI/edit-task/edit-task.component.html
@@ -1,3 +1,92 @@
-<p>
-  edit-task works!
-</p>
+<!-- main app container -->
+
+<div class="container cont-left-margin">
+  <!-- <div class="col-md-6 offset-md-3"> -->
+  <div class="page-title">Add Task</div>
+  <form class="form-horizontal" [formGroup]="EditTaskForm" #formDir="ngForm" (ngSubmit)="onSubmit()" novalidate autocomplete="off">
+
+    <div class="example-container">
+
+      <div class="row">
+        <div class="col-md-8">
+          <mat-form-field class="parm-width">
+            <input matInput placeholder="Project" formControlName="ProjectName" class="form-control" required  readonly>
+          </mat-form-field>
+        </div>
+        <!-- <div class="col-md-4 search-manager">
+          <button mat-raised-button color="primary" type="search" (click)="openSearchProject()" [disabled]="isParentTask">Search</button>
+        </div> -->
+      </div>
+
+      <mat-form-field>
+        <input matInput placeholder="Task" formControlName="Task" class="form-control" required maxlength="60">
+        <mat-error *ngIf="taskName?.required">
+          Task Name is required
+        </mat-error>
+      </mat-form-field>
+
+      <!-- <div class="row">
+        <div class="col-md-4 col-sm-12 top-padding">
+          <mat-checkbox formControlName="chkParentTask" (change)="ActionParent($event)" >Parent Task</mat-checkbox>
+        </div>
+      </div> -->
+<br>
+      <div class="form-group col-md-4 col-sm-12">
+        <div class="row">
+          <label for="TaskPriority">Priority:</label>
+          <mat-slider min="0" max="30" step="1" id="TaskPriority" formControlName="TaskPriority" class="parm-width" thumbLabel></mat-slider>
+          <mat-error *ngIf="TaskPriority?.min">
+            Priority is required
+          </mat-error>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-8">
+          <mat-form-field class="parm-width">
+            <input matInput placeholder="Parent Task" formControlName="ParentTask" class="form-control" required readonly>
+          </mat-form-field>
+        </div>
+        <div class="col-md-4 search-manager">
+          <button mat-raised-button color="primary" type="search" (click)="openSearchParent()" >Search</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4 col-sm-12">
+          <mat-form-field>
+            <input matInput [matDatepicker]="stPicker" placeholder="Start Date" formControlName="startDate" required>
+            <mat-datepicker-toggle matSuffix [for]="stPicker"></mat-datepicker-toggle>
+            <mat-datepicker #stPicker></mat-datepicker>
+          </mat-form-field>
+        </div>
+        <div class="col-md-4 col-sm-12">
+          <mat-form-field>
+            <input matInput [matDatepicker]="endPicker" placeholder="End Date" formControlName="endDate" required>
+            <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
+            <mat-datepicker #endPicker></mat-datepicker>
+          </mat-form-field>
+        </div>
+      </div>
+
+
+      <div class="row">
+        <div class="col-md-8">
+          <mat-form-field class="parm-width">
+            <input matInput placeholder="UserName" formControlName="UserName" class="form-control" required readonly>
+          </mat-form-field>
+        </div>
+        <!-- <div class="col-md-4 search-manager">
+          <button mat-raised-button color="primary" type="search" (click)="openSearchUser()"  [disabled]="isParentTask">Search</button>
+        </div> -->
+      </div>
+
+    </div>
+
+    <div class="button-row">
+      <button mat-raised-button color="primary" type="submit">Update Task</button>
+      <button mat-raised-button color="primary" type="reset" (click)="resetForm()">Reset</button>
+      <button mat-raised-button color="primary" type="cancel" (click)="cancelForm()">Cancel</button>
+    </div>
+
+  </form>
