Add User validations verified and implemented

--- a/src/app/UI/add-user/add-user.component.html
+++ b/src/app/UI/add-user/add-user.component.html
@@ -11,6 +11,9 @@
         <mat-error *ngIf="FirstName?.required">
           First Name is required
         </mat-error>
+        <mat-error>
+
+        </mat-error>
       </mat-form-field>
       <mat-form-field>
         <input matInput placeholder="Last Name" formControlName="LastName" class="form-control" required maxlength="30">
