--- a/src/app/UI/view-task/view-task.component.html
+++ b/src/app/UI/view-task/view-task.component.html
@@ -36,7 +36,7 @@
   <div id="divTaskList">
       <mat-list>
         <mat-list-item class="pading-bottom" *ngFor="let task of TaskList | orderby: path : order">
-          <div class="col-md-8 col-sm-12 pading-bottom lst-bg-color">
+          <div class="col-md-8 col-sm-12 pading-bottom lst-bg-color minwidth">
 
             <div class="col-md-12 top-padding">
               <h4 mat-line class="lst-itm-header">Task</h4>
