--- a/src/app/UI/edit-task/edit-task.component.html
+++ b/src/app/UI/edit-task/edit-task.component.html
@@ -20,9 +20,9 @@
 
       <mat-form-field>
         <input matInput placeholder="Task" formControlName="Task" class="form-control" required maxlength="60">
-        <mat-error *ngIf="taskName?.required">
+        <!-- <mat-error *ngIf="taskName?.required">
           Task Name is required
-        </mat-error>
+        </mat-error> -->
       </mat-form-field>
 
       <!-- <div class="row">
@@ -35,9 +35,9 @@
         <div class="row">
           <label for="TaskPriority">Priority:</label>
           <mat-slider min="0" max="30" step="1" id="TaskPriority" formControlName="TaskPriority" class="parm-width" thumbLabel></mat-slider>
-          <mat-error *ngIf="TaskPriority?.min">
+          <!-- <mat-error *ngIf="TaskPriority?.min">
             Priority is required
-          </mat-error>
+          </mat-error> -->
         </div>
       </div>
 
