--- a/src/app/UI/add-task/add-task.component.html
+++ b/src/app/UI/add-task/add-task.component.html
@@ -14,7 +14,7 @@
           </mat-form-field>
         </div>
         <div class="col-md-4 search-manager">
-          <button mat-raised-button color="primary" type="search" (click)="openSearchProject()" [disabled]="isParentTask">Search</button>
+          <input mat-raised-button color="primary" class="mat-raised-button mat-primary" type="button" (click)="openSearchProject()" [disabled]="isParentTask" value="Search" />
         </div>
       </div>
 
@@ -49,7 +49,7 @@
           </mat-form-field>
         </div>
         <div class="col-md-4 search-manager">
-          <button mat-raised-button color="primary" type="search" (click)="openSearchParent()"  [disabled]="isParentTask">Search</button>
+          <input mat-raised-button color="primary" class="mat-raised-button mat-primary" type="button" (click)="openSearchParent()" [disabled]="isParentTask" value="Search" />
         </div>
       </div>
 
@@ -78,7 +78,7 @@
           </mat-form-field>
         </div>
         <div class="col-md-4 search-manager">
-          <button mat-raised-button color="primary" type="search" (click)="openSearchUser()"  [disabled]="isParentTask">Search</button>
+          <input mat-raised-button color="primary" class="mat-raised-button mat-primary" type="button" (click)="openSearchUser()" [disabled]="isParentTask" value="Search" />
         </div>
       </div>
 
