checkin final formatted code

--- a/src/app/UI/Common/search-user/search-user.component.html
+++ b/src/app/UI/Common/search-user/search-user.component.html
@@ -6,7 +6,7 @@
     </div>
   </div>
   <br/>
-   <table class="table table-bordered table-responsive table-condensed">
+  <table class="table table-responsive table-condensed">
     <thead class="light-blue">
       <tr>
         <th>Select</th>
