--- a/src/app/UI/add-user/add-user.component.css
+++ b/src/app/UI/add-user/add-user.component.css
@@ -41,8 +41,13 @@
 .lst-itm-header{
     width: 50%;
     font-size: 15px;
+    font-weight: bold;
 }
 
 .cont-left-margin{
     margin-left: 0;
 }
+
+.lst-bg-color{
+    background-color: aliceblue;
+    }
